--- a/09-Sep-2019.ipynb
+++ b/09-Sep-2019.ipynb
@@ -42,22 +42,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-101-40e687ce9abc>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-101-40e687ce9abc>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "factorial has been called with n = 5\n",
+      "factorial has been called with n = 4\n",
+      "factorial has been called with n = 3\n",
+      "factorial has been called with n = 2\n",
+      "factorial has been called with n = 1\n",
+      "result for  2  * factorial( 1 ):  2\n",
+      "result for  3  * factorial( 2 ):  6\n",
+      "result for  4  * factorial( 3 ):  24\n",
+      "result for  5  * factorial( 4 ):  120\n",
+      "120\n"
      ]
     }
    ],
    "source": [
     "#Factorail With recursion\n",
     "def factorial(n):\n",
+    "    print(\"factorial has been called with n = \" + str(n))\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        res = n * factorial(n-1)\n",
+    "        print(\"result for \", n, \" * factorial(\" ,n-1, \"): \",res)\n",
+    "        return res\n",
+    "\n",
+    "print(factorial(5))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100,98,96,94,92,90,88,86,84,82,80,78,76,74,72,70,68,66,64,62,60,58,56,54,52,"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to print reverse of given range in the same line\n",
+    "def reverse():\n",
+    "    for i in range(100,50,-2):\n",
+    "        print(i,end=\",\")\n",
+    "reverse()\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter num:44\n",
+      "1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to print the odd numbers in a reverse order\n",
+    "def odd():\n",
+    "    n=int(input(\"enter num:\"))\n",
+    "    for i in range(1,n+1):\n",
+    "        if i%2!=0:\n",
+    "            print(i,end=\",\")\n",
+    "odd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to calculate the sum of numbers in a given range \n",
+    "def add(n):\n",
+    "    s=0\n",
+    "    for i in range(1,n+1):\n",
+    "        s=s+i\n",
+    "    print(s)        \n",
+    "add(10)        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Function to calculate the average of given range\n",
+    "def avg(n):\n",
+    "    s=0\n",
+    "    for i in range(1,n+1):\n",
+    "        s=s+i\n",
+    "        average=s/i\n",
+    "    print(average)        \n",
+    "avg(10)        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to generate all the leap years in  given time period \n",
+    "def time(lb,ub):\n",
+    "    for i in range(lb,ub+1):\n",
+    "        if (i%400==0 or (i%4==0 and i%100!=0)):\n",
+    "            print(i)\n",
+    "time(1998,2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to print all the numbers divsible by 6 and not a factor of 100 in agiven range(inclusive)\n",
+    "def division(lb,ub):\n",
+    "    for i in range(lb,ub+1):\n",
+    "        if i%6==0 and 100%i!=0:\n",
+    "            print(i)\n",
+    "division(1,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leap year|\n",
+      "31622400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to Calculate no.of days given in a time period using leap year logic\n",
+    "def leap(n):\n",
+    "    #for i in range(lb,ub+1):\n",
+    "        if (n%400==0 or (n%4==0 and n%100!=0)):\n",
+    "            print(\"leap year|\")\n",
+    "            print(366*24*60*60)\n",
+    "        else:\n",
+    "            print(\"not a leap year\")\n",
+    "            print(365*24*60*60)\n",
+    "leap(2016)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to print the cubes of average of all the even numbers which are divisible by 6\n",
+    "def avg(n):\n",
+    "    count=0\n",
+    "    for i in range(1,n+1):\n",
+    "        if i%2==0 and i%6==0:\n",
+    "            s=i**3\n",
+    "            count=count+1\n",
+    "            average=s/count\n",
+    "            print(average)\n",
+    "avg(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "5\n",
+      "10\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to  generate sum of factors in a given numbers\n",
+    "def fact(n):\n",
+    "    count=0\n",
+    "    for i in range(1,n+1):\n",
+    "        if n%i==0:\n",
+    "            print(i)\n",
+    "            count+=i\n",
+    "    print(count)\n",
+    "    #print(n)\n",
+    "fact(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to generate all perfect numbers in a given range\n",
+    "#Perfect number -Sum of all its factors is equal to the number itself\n",
+    "#6-----1,2,3\n",
+    "def perfect(n):\n",
+    "    for i in range(1,n+1):\n",
+    "        s=0\n",
+    "        for j in range(1,i):\n",
+    "            if i%j==0:\n",
+    "                s=s+j\n",
+    "        if s==i:\n",
+    "            print(i)\n",
+    "perfect(28)\n",
+    "            \n",
+    "        \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 5 7 11 13 "
+     ]
+    }
+   ],
+   "source": [
+    "# Function to  check given number is prime or not\n",
+    "def prime(n):\n",
+    "    #n=int(input())\n",
+    "    for i in  range(1,n+1):\n",
+    "        count =0\n",
+    "        for j in range (1,i+1):\n",
+    "            if (i%j==0):\n",
+    "                count=count+1\n",
+    "        if count==2:\n",
+    "            \n",
+    "            print(j,end=\" \")\n",
+    "prime(15)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to calculate the avg of prime numbers in a given range\n",
+    "def prime(lb,ub):\n",
+    "    n=int(input())\n",
+    "    for i in range(1,n+1):\n",
+    "        count=0\n",
+    "        for j in range(1,n+1):\n",
+    "            if i%j==0:\n",
+    "                count=count+1\n",
+    "            if count==2:\n",
+    "    print(j,end=',')\n",
+    "prime(1,10)"
    ]
   },
   {
